# slack-influencer-bot

./: .dockerignore  Dockerfile  Procfile  pyproject.toml
src/: bot.py
