[tool.poetry]
name = "influencer-bot"
version = "0.1.0"
description = ""
readme = "README.md"

# Tells Poetry where to find your package source
packages = [
  { include = "influencer_bot", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
slack-bolt = ">=1.23.0,<2.0.0"
google-auth = ">=2.40.3,<3.0.0"
google-auth-oauthlib = ">=1.2.2,<2.0.0"
google-auth-httplib2 = ">=0.2.0,<0.3.0"
google-api-python-client = ">=2.171.0,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
